Overflow issue

--- a/Projects/Salisbury/CSS/OfficialSalisburys.css
+++ b/Projects/Salisbury/CSS/OfficialSalisburys.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  overflow: hidden;
+  overflow: auto;
   height: 100vh;
 }
 
@@ -80,7 +80,6 @@ h2 {
   color: grey;
   margin: 10px !important;
   padding: 0px !important;
-  overflow: auto;
 }
 
 .fa-chevron-right {
